# TMU

./: .gitignore
Inheritance/: BankAccountTester.java  Savingacout.java
Semester-3/: Toronto-Metropolitan-University.code-workspace
Winter-2026/CPS506/lab6/: lab6.cabal
Winter-2026/CPS506/lab6/app/: Main.hs
Winter-2026/CPS506/lab6/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Winter-2026/CPS506/lab6/dist-newstyle/packagedb/ghc-9.6.7/: lab6-0.1.0.0-inplace-lab6-lib.conf  package.cache
Winter-2026/CPS506/lab6/lib/: Lab6.hs
Winter-2026/CPS506/lab6/tests/: Lab6Test.hs
lab 3/: AllEqual2D.java  FindAllWithArrayLists.java  Search2DArray.java  SetIntersection.java  ShiftStrings.java
lab 4/: Address.java  AddressTester.java  Automobile.java  CashRegister.java  CounterTester.java  LetterTester.java  LoginForm.java  MenuTester.java  Microwave.java  MicrowaveTester.java  Person.java  Province.java  StudentTester.java
lab 5/: CreditCard.java  D.java  GroceryChain.java  GroceryStore.java  GroceryTester.java  InheritancePuzzleTester.java  Person.java  PersonTester.java  StaticVariableClass.java  VotingMachine.java
lab 6/: Appointment.java  Computer.java  DailyAppointment.java  ElectronicsProduct.java  ElectronicsStore.java  ElectronicsStoreTester.java  Instructor.java  MonthlyAppointment.java  Point.java  PointTester.java  Question.java  SchoolPersonTester.java  Student.java  temp.java
lab 9/: ListIteratorTester.java  ListRemoveContainsTester.java  QueueTester.java  StackUndoTester.java  (+6 more)
(+113 files in other folders)
